# CodexPlusPlus

./: .gitignore  AGENTS.md  Cargo.toml  HANDOVER.md  README.md  README_EN.md
apps/codex-plus-manager-native/: Cargo.toml  build.rs
apps/codex-plus-manager-native/assets/packaging/: windows-app-manifest.xml
apps/codex-plus-manager-native/src/: app.rs  desktop_host.rs  external_url.rs  fonts.rs  i18n.rs  icons.rs  lib.rs  main.rs  perf.rs  runtime.rs  state.rs  theme.rs
apps/codex-plus-manager-native/src/runtime/: context.rs  marketplace.rs  provider.rs  sessions.rs  settings.rs  zed_remote.rs
apps/codex-plus-manager-native/src/state/: context.rs  desktop_integration.rs  environment.rs  import.rs  maintenance.rs  marketplace.rs  provider.rs  sessions.rs  update.rs  zed_remote.rs
apps/codex-plus-manager-native/src/views/: about.rs  context.rs  enhancements.rs  environment.rs  import.rs  maintenance.rs  mod.rs  overview.rs  (+3 more)
apps/codex-plus-manager-native/tests/: about_external_links.rs  context_runtime.rs  context_state.rs  context_ui_semantics.rs  desktop_host_smoke.rs  desktop_integration_runtime.rs  desktop_integration_state.rs  distribution_boundary.rs  enhancements_runtime.rs  enhancements_shell.rs  enhancements_state.rs  enhancements_ui_semantics.rs  environment_runtime.rs  environment_state.rs  external_url.rs  functional_parity.rs  import_environment_ui_semantics.rs  maintenance_runtime.rs  maintenance_state.rs  maintenance_ui_semantics.rs  marketplace_runtime.rs  marketplace_state.rs  marketplace_ui_semantics.rs  path_picker.rs  provider_import.rs  provider_import_runtime.rs  provider_runtime.rs  provider_state.rs  provider_ui_semantics.rs  sessions_runtime.rs  sessions_state.rs  sessions_ui_semantics.rs  settings_runtime.rs  settings_state.rs  settings_ui_semantics.rs  ui_semantics.rs  ui_snapshots.rs  update_runtime.rs  update_state.rs  update_ui_semantics.rs  (+6 more)
apps/codex-plus-manager/src-tauri/: Cargo.toml  build.rs
crates/codex-plus-manager-service/: Cargo.toml
crates/codex-plus-manager-service/src/: context_tools.rs  desktop_host.rs  desktop_integration.rs  desktop_integration_system.rs  enhancements.rs  error.rs  lib.rs  maintenance.rs  manager_settings.rs  overview.rs  plugin_marketplace.rs  provider.rs  provider_activation.rs  provider_error.rs  provider_import.rs  provider_network.rs  provider_presets.rs  provider_sync.rs  provider_system.rs  relay_environment.rs  revision_ledger.rs  sessions.rs  system.rs  update.rs  user_scripts.rs  zed_remote.rs
crates/codex-plus-manager-service/tests/: context_tools.rs  desktop_host.rs  desktop_integration.rs  enhancements.rs  maintenance.rs  manager_settings.rs  overview.rs  plugin_marketplace.rs  provider_activation.rs  provider_common_config.rs  provider_import.rs  provider_network.rs  provider_presets.rs  provider_sync.rs  provider_workspace.rs  relay_environment.rs  sessions.rs  update.rs  user_scripts.rs  zed_remote.rs
(+169 files in other folders)
