[package]
name = "codex-plus-manager-native"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "codex_plus_manager_native"
path = "src/lib.rs"

[[bin]]
name = "codex-plus-plus-manager-native"
path = "src/main.rs"

[dependencies]
codex-plus-core = { path = "../../crates/codex-plus-core" }
codex-plus-manager-service = { path = "../../crates/codex-plus-manager-service" }
eframe.workspace = true
egui_extras.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
egui_kittest = { version = "=0.35.0", features = ["snapshot", "wgpu"] }
tempfile.workspace = true
