[package]
name = "codex-plus-manager-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
codex-plus-core = { path = "../codex-plus-core" }
codex-plus-data = { path = "../codex-plus-data" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
toml_edit.workspace = true
url.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true
